feat: Display a list and support filtering and selection of elements with KO

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
-html, body, #map {
+html, body, .map-content {
     height: 800px;
+}
+
+body {
+    background-color: lightblue;
+}
+
+li.selected {
+    color: red;
+}
+
+.text-content {
+    width: 25%;
+}
+
+.map-content {
+    width: 72%;
+    background-color: lightslategrey;
 }
