--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,10 @@ li.selected {
 }
 
 .text-content {
-    width: 25%;
+    /*width: 25%;*/
 }
 
 .map-content {
-    width: 72%;
+    /*width: 72%;*/
     background-color: lightslategrey;
 }
