--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,19 @@ header {
 
 }
 
+.map-placeholder {
+    /*background-image: url("../img/rd.jpg");*/
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/9/95/Dominican_Republic_%28orthographic_projection%29.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.map-missing-excuse {
+    position: absolute;
+    text-align: end;
+    bottom: 100px;
+    right: 20px;
+}
 
 @media (min-width: 767px) {
     button.close,
